<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".feature_transaction.ui.ChoosingEntryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="44dp"
            android:src="@drawable/icon_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choosing_frag_one_step_text"
            android:textSize="22sp"
            android:fontFamily="@font/nunitosans_bold"
            android:layout_marginStart="21dp"
            android:layout_marginTop="29dp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choosing_frag_agreement"
            android:layout_marginStart="21dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="27dp"
            android:textSize="11sp"
            android:textColor="@color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/google_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="36dp"
            app:icon="@drawable/icon_google_logo"
            app:iconGravity="start"
            app:iconTintMode="add"
            app:iconTint="#00000000"
            app:iconSize="25dp"
            android:text="@string/regist_with_google"
            android:textSize="14sp"
            android:fontFamily="@font/nunito_sans"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="21dp"
            android:textAllCaps="false"
            android:background="@drawable/style_button_choosing"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/yandex_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            app:icon="@drawable/icon_yandex"
            app:iconGravity="start"
            app:iconTintMode="add"
            app:iconTint="#00000000"
            android:text="@string/sign_in_with_yandex"
            android:fontFamily="@font/nunito_sans"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="21dp"
            android:textAllCaps="false"
            android:background="@drawable/style_button_choosing"/>


       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="44dp">

           <View
               android:id="@+id/view1"
               android:layout_width="0dp"
               android:layout_height="1dp"
               android:background="@color/white"
               android:layout_marginStart="36dp"
               android:layout_marginEnd="19dp"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toStartOf="@+id/or_textId"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent" />

           <TextView
               android:id="@+id/or_textId"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/or"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               android:layout_marginStart="36dp"
               android:textColor="@color/white"
               android:layout_marginEnd="19dp"/>


           <View
               android:id="@+id/view2"
               android:layout_width="0dp"
               android:layout_height="1dp"
               android:layout_marginEnd="36dp"
               android:background="@color/white"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toEndOf="@+id/or_textId"
               android:layout_marginStart="19dp"
               app:layout_constraintTop_toTopOf="parent" />


       </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/regist_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_bottom_button_choosing"
            android:layout_marginTop="30dp"
            android:layout_marginStart="21dp"
            android:text="@string/regist"
            android:textColor="@color/white"
            android:layout_marginEnd="21dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:layout_marginStart="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_account_text"
                android:textSize="17sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/auth_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth"
                android:textSize="17sp"
                android:layout_marginStart="3dp"
                android:textColor="#9DEEB2"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>