<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context=".feature_pager.ui.FirstPagerFragment">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:src="@drawable/icon_molnia"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_pagerText"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:textSize="28sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/view_pager_item_bg"
            android:textSize="16sp"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/firstText_pagerTwo"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:layout_marginBottom="15dp"
                android:textSize="19dp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/view_pager_item_bg"
            android:textSize="16sp"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/secondText_pagerTwo"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:layout_marginBottom="15dp"
                android:textSize="19sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/view_pager_item_bg"
            android:textSize="16sp"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/thirdText_pagerTwo"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:layout_marginBottom="20dp"
                android:textSize="19sp" />


        </LinearLayout>
    </LinearLayout>

</LinearLayout>

