<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".feature_transaction.ui.ChoosingEntryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginTop="44dp"
            android:src="@drawable/icon_logo"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="27sp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/nunitosans_bold"
            android:layout_marginTop="29dp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choosing_frag_agreement"
            android:layout_marginTop="8dp"
            android:textSize="11sp"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textColor="@color/white"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/red"
            app:errorEnabled="false"
            android:layout_marginTop="36dp"
            android:textAlignment="center"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="21dp">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="18sp"
                android:paddingLeft="18dp"
                android:textColor="@color/white"
                android:fontFamily="@font/nunito_sans"
                android:singleLine="true"
                android:hint="@string/enter_the_email"
                android:textAllCaps="false"
                android:background="@drawable/style_button_choosing"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:layout_gravity="center"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/red"
            app:endIconDrawable="@drawable/icon_eyse_closed"
            android:layout_marginTop="24dp"
            android:layout_marginStart="21dp"
            android:gravity="center_vertical"
            android:layout_marginEnd="21dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="18sp"
                android:paddingLeft="18dp"
                android:autofillHints="password"
                android:hint="@string/enter_the_password"
                android:inputType="textPassword"
                android:layout_gravity="center_vertical"
                android:textColor="@color/white"
                android:singleLine="true"
                app:helperTextEnabled="true"
                android:textAllCaps="false"
                android:background="@drawable/style_button_choosing"/>

        </com.google.android.material.textfield.TextInputLayout>




        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/auth_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_bottom_button_choosing"
            android:layout_marginTop="30dp"
            android:layout_marginStart="21dp"
            android:gravity="center"
            android:textAllCaps="true"
            android:text="@string/next"
            android:textColor="@color/white"
            android:layout_marginEnd="21dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_account_text"
                android:layout_marginStart="24dp"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/regist_textviewID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regist"
                android:textSize="15sp"
                android:layout_marginStart="3dp"
                android:textColor="#9DEEB2"/>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <View
                android:id="@+id/view1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="19dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/or_textId"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/or_textId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="36dp"
                android:textColor="@color/white"
                android:layout_marginEnd="19dp"/>


            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginEnd="36dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/or_textId"
                android:layout_marginStart="19dp"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:weightSum="2">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/yandexButton"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/style_button_choosing"
                android:fontFamily="@font/nunito_sans"
                android:text="Yandex ID"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:icon="@drawable/icon_yandex"
                app:iconGravity="textStart"
                app:iconTint="#00000000"
                app:iconTintMode="add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/middle_obj"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="9dp"
                android:layout_marginEnd="25dp"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/googleButton"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/style_button_choosing"
                android:fontFamily="@font/nunito_sans"
                android:text="Google"
                app:iconSize="28dp"
                android:textAllCaps="false"
                app:icon="@drawable/icon_google_logo"
                app:iconGravity="start"
                app:iconTint="#00000000"
                app:iconTintMode="add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/middle_obj"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="9dp"/>


            <LinearLayout
                android:id="@+id/middle_obj"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>