<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context=".feature_transaction.ui.PagerFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:src="@drawable/icon_logo"
        android:layout_marginTop="?actionBarSize"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_noxai"
        android:layout_marginTop="24dp"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_medium"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:textSize="19sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="24dp"
        android:text="@string/ask_anyone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="44dp">


        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/liner_lout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/liner_lout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toTopOf="@+id/next_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="40dp">


            <View
                android:id="@+id/oneView_viewPager"
                android:layout_width="35dp"
                android:layout_height="2dp"
                android:background="@color/white" />

            <View
                android:id="@+id/twoView_viewPager"
                android:layout_width="35dp"
                android:layout_height="2dp"
                android:layout_marginLeft="15dp"
                android:background="@color/white" />


            <View
                android:id="@+id/threeView_viewPager"
                android:layout_width="35dp"
                android:layout_height="2dp"
                android:layout_marginLeft="15dp"
                android:background="@color/white" />

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/button_pagerfragment_bg"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/next"
            android:fontFamily="@font/nunito_sans"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="30dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>